grammar.txt
<program>     = <statements> ;

<statements>  = <statements> <statement> ;

(* there is more types of statements *)
<statement>   = <assignment> ;

<assignment>  = <type_assign> <identifier> "=" <expression> ;

<expression>  = ["+"|"-"] <term> { ("+"|"-") <term> } ;

<term>        = <factor> { ("*"|"/") <factor> } ;

<factor>      =
		<identifier>
    		| <number>
    		| "(" <expression> ")" ;

<identifier>  = <letter> { alphanum | "_" } ;

<type_assign> = "int" | "float" | "bool" ;

<alphanum>    = <digit> | <letter> ;

<number>      = [ '-' | '+' ] <digit> { <digit> } ;

<digit>       = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

<letter>      = "A" | "B" | "C" | "D" | "E" | "F" | "G"
              | "H" | "I" | "J" | "K" | "L" | "M" | "N"
              | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
              | "V" | "W" | "X" | "Y" | "Z" | "a" | "b"
              | "c" | "d" | "e" | "f" | "g" | "h" | "i"
              | "j" | "k" | "l" | "m" | "n" | "o" | "p"
              | "q" | "r" | "s" | "t" | "u" | "v" | "w"
              | "x" | "y" | "z" ;
 
<whitespace>  = ? ASCII character 32 ? ;
